# syspart

./: .gitignore  COPYING  ChangeLog  Makefile  Makefile.am  README  README.md  acsubst.mk  acversion.mk  bootstrap  builddeb.in  configure.ac  configure.in  generate-release-notes  generate-version  rpmbuild.sh  syspart.spec.in
bitops/: Makefile  Makefile.am  bitmap.c  bitmap.h  bitops  bitops.c
init/: Makefile.am  syspart.functions  syspart.init  syspart.service  syspart.sysconf
tools/: check-affinity  syspart  syspart-config
