dnl Process this file with autoconf to produce a configure script.

AC_INIT(syspart, 9999)

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE([silent-rules subdir-objects])
AM_SILENT_RULES([yes])

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

AC_PREFIX_DEFAULT(/usr)
AC_SUBST(prefix)

AC_OUTPUT([
    Makefile
])
